fix footer spacing

--- a/input.css
+++ b/input.css
@@ -16,3 +16,7 @@ body {
 	width: 100%;
 	height: 2rem;
 }
+
+main {
+	padding-bottom: 2rem;
+}
