--- a/style/output.css
+++ b/style/output.css
@@ -517,6 +517,10 @@ video {
   position: static;
 }
 
+.relative {
+  position: relative;
+}
+
 .sticky {
   position: sticky;
 }
@@ -620,6 +624,11 @@ video {
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -684,4 +693,8 @@ body {
   bottom: 0;
   width: 100%;
   height: 2rem;
+}
+
+main {
+  padding-bottom: 2rem;
 }
